# words

./: Readme.md
board_generator_rust/: .gitignore  Cargo.toml  Readme.md  rustfmt.toml
board_generator_rust/.github/workflows/: actions.yml
board_generator_rust/dictionary_files/: clean_dictionary.txt  precomputed_words.json
board_generator_rust/src/: board.rs  cli.rs  config.rs  dictionary.rs  generator.rs  main.rs  utils.rs
board_generator_rust/src/board/: board_manager.rs  cell_contents.rs  direction.rs  placed_word.rs
board_generator_rust/src/dictionary/: dictionary_manager.rs  dictionary_utils.rs
board_generator_rust/src/generator/: generate_board.rs  generated_board.rs
dictionary_generator_go/: .gitignore  Readme.md  build.sh  go.mod  makefile
dictionary_generator_go/assets/: clean_dictionary.txt  sorted_uniques.json
dictionary_generator_go/cmd/cmdAll/: cmdAll.go
dictionary_generator_go/dictionary/: CreateCleanDictionary.go  createSortedUniqueMap.go  readBadWordsFileIntoMap.go  writeTxtFile.go
dictionary_generator_go/dictword/: Sort.go
dictionary_generator_go/internal/dictionary/: CreateCleanDictionary.go  constants.go  (+5 more)
word_solver_tauri_app/: .prettierignore  .prettierrc.json  README.md  package-lock.json  package.json
word_solver_tauri_app/src/: App.css  App.tsx  solutions.css  styles.css
word_solver_tauri_app/src-tauri/: Cargo.toml  tauri.conf.json
wordgame_tauri_app/: .gitignore  README.md  package-lock.json  package.json
wordgame_tauri_app/src/: App.tsx  style.css
wordgame_tauri_app/src-tauri/: Cargo.toml  tauri.conf.json
(+48 files in other folders)
